# rust-miniscript

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  justfile  nightly-version  rbmt-version  rbmt.toml  rustfmt.toml  tags
.claude/: settings.local.json
.github/actions/prepare/: action.yml
.github/workflows/: README.md  cron-daily-fuzz.yml  cron-weekly-update-nightly.yml  fuzz.yml  rust.yml  shellcheck.yml
bitcoind-tests/: Cargo.toml
bitcoind-tests/tests/: test_cpp.rs  test_desc.rs
bitcoind-tests/tests/setup/: mod.rs  test_util.rs
contrib/: crates.sh  integration_test.sh  pin.sh  test.sh  test_vars.sh  whitelist_deps.sh
doc/: compiler.md  high_level_design.md  resource_limitations.md  security_report_2022_04_20.md
embedded/: Cargo.toml  README.md  memory.x
embedded/scripts/: env.sh  install-deps
embedded/src/: main.rs
examples/: big.rs  exp_test.rs  htlc-string.rs  htlc.rs  keyexpr.rs  parse.rs  plan_spend.rs  psbt.rs  psbt_sign_finalize.rs  sign_multisig.rs  taproot.rs  verify_tx.rs  xpub_descriptors.rs
examples/taptree_of_horror/: README.md  helper_fns.rs  taptree_of_horror.excalidraw  taptree_of_horror.rs
fuzz/: Cargo.toml  README.md  cycle.sh  fuzz-util.sh  fuzz.sh  generate-files.sh
fuzz/fuzz_targets/: compile_descriptor.rs  compile_taproot.rs  miniscript_satisfy.rs  parse_descriptor.rs  parse_descriptor_definite.rs  parse_descriptor_priv.rs  parse_descriptor_secret.rs  regression_compiler.rs  regression_descriptor_parse.rs  regression_taptree.rs  roundtrip_abstract.rs  roundtrip_concrete.rs  roundtrip_descript.rs  roundtrip_descriptor.rs  roundtrip_miniscript.rs  roundtrip_miniscript_script.rs  roundtrip_miniscript_script_tap.rs  roundtrip_miniscript_str.rs  roundtrip_policy.rs  roundtrip_scriptast.rs  roundtrip_semantic.rs
fuzz/src/: lib.rs  util.rs
integration_test/: Cargo.toml  bitcoin-core-0.20.0.sha256sum  bitcoin-core-0.21.0.sha256sum  bitcoin-core-22.0.sha256sum  random_ms.txt  run.sh
integration_test/src/: main.rs  read_file.rs  test_cpp.rs  test_desc.rs  test_util.rs
src/: benchmarks.rs  bip322.rs  blanket_traits.rs  compile_all.rs  descriptor.rs  dummy.rs  error.rs  expression.rs  lib.rs  macros.rs  parse.rs  plan.rs  pub_macros.rs  satisfy_all.rs  test_utils.rs  threshold.rs  timelock.rs  util.rs  validation.rs
src/abstract/: lift.rs  mod.rs
src/analysis/: mod.rs
src/ast/: astelem.rs  compiler.rs  lex.rs  mod.rs  satisfy.rs
src/descript/: astelem.rs  lex.rs  mod.rs  satisfy.rs
src/descriptor/: bare.rs  checksum.rs  create_descriptor.rs  descriptor_impl.rs  iter.rs  key.rs  key_map.rs  mod.rs  musig.rs  pretaproot.rs  satisfied_constraints.rs  satisfied_contraints.rs  segwitv0.rs  sh.rs  sortedmulti.rs  sortedmulti_a.rs  tr.rs
src/descriptor/satisfied_constraints/: error.rs  mod.rs  stack.rs
src/descriptor/tr/: mod.rs  spend_info.rs  taptree.rs
src/descriptor/wallet_policy/: key_expression.rs  mod.rs
src/expression/: error.rs  mod.rs
src/interpreter/: error.rs  inner.rs  mod.rs  stack.rs  util.rs
src/iter/: mod.rs  tree.rs
src/lift/: lifted.rs  mod.rs
src/miniscript/: analyzable.rs  astelem.rs  context.rs  decode.rs  display.rs  evaluate.rs  hash256.rs  iter.rs  lex.rs  limits.rs  mod.rs  ms_tests.rs  musig_key.rs  parse.rs  satisfy.rs  types.rs
src/miniscript/hashes/: mod.rs  sha256.rs
src/miniscript/satisfy/: mod.rs  sat_dissat.rs
src/miniscript/types/: correctness.rs  extra_props.rs  malleability.rs  mod.rs
src/policy/: abstract.rs  compiler.rs  concrete.rs  lift.rs  mod.rs  semantic.rs
src/primitives/: absolute_locktime.rs  mod.rs  positive_f64.rs  relative_locktime.rs  threshold.rs
src/psbt/: finalizer.rs  mod.rs
tests/: bip-174.rs  test_cpp.rs  test_desc.rs
tests/data/: random_ms.txt
tests/setup/: mod.rs  test_util.rs
