[package]
name = "miniscript"
version = "13.0.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>, Sanket Kanjalkar <sanket1729@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-miniscript/"
repository = "https://github.com/rust-bitcoin/rust-miniscript/"
description = "Miniscript: a subset of Bitcoin Script designed for analysis"
keywords = [ "crypto", "bitcoin", "miniscript", "script" ]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin/secp-recovery", "bech32/std", "serde?/std"]
compiler = []
trace = []

serde = ["dep:serde", "bitcoin/serde"]
rand = ["bitcoin/rand"]
base64 = ["bitcoin/base64"]

[dependencies]
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
bitcoin = { version = "0.32.6", default-features = false }
hex = { package = "hex-conservative", default-features = false, features = ["alloc"], version = "1.0.0" }

serde = { version = "1.0.103", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_test = "1.0.147"
bitcoin = { version = "0.32.0", features = ["base64"] }
secp256k1 = {version = "0.29.0", features = ["rand-std"]}

[[example]]
name = "htlc"
required-features = ["std", "compiler"]

[[example]]
name = "parse"
required-features = ["std"]

[[example]]
name = "sign_multisig"
required-features = ["std"]

[[example]]
name = "verify_tx"
required-features = ["std"]

[[example]]
name = "xpub_descriptors"
required-features = ["std"]

[[example]]
name = "taproot"
required-features = ["compiler","std"]

[[example]]
name = "psbt_sign_finalize"
required-features = ["std", "base64"]

[[example]]
name = "big"
required-features = ["std", "base64", "compiler"]

[[example]]
name = "taptree_of_horror"
path = "examples/taptree_of_horror/taptree_of_horror.rs"
required-features = ["compiler"]

[package.metadata.rbmt.lint]
allowed_duplicates = [
    "hex-conservative",
]

[package.metadata.rbmt.test]
examples = [
    "htlc:std compiler",
    "parse:std",
    "sign_multisig:std",
    "verify_tx:std",
    "xpub_descriptors:std",
    "taproot:std compiler",
    "psbt_sign_finalize:std base64",
    "taptree_of_horror:std compiler",
]
exact_features = [
    ["compiler", "trace"],
    ["compiler", "serde"],
    ["compiler", "rand"],
    ["compiler", "base64"],
    ["trace", "serde"],
    ["trace", "rand"],
    ["trace", "base64"],
    ["serde", "rand"],
    ["serde", "base64"],
    ["rand", "base64"],
    ["compiler", "trace", "serde", "rand", "base64"],
    ["std", "compiler"],
    ["std", "trace"],
    ["std", "serde"],
    ["std", "rand"],
    ["std", "base64"],
    ["std", "compiler", "trace"],
    ["std", "compiler", "serde"],
    ["std", "compiler", "rand"],
    ["std", "compiler", "base64"],
    ["std", "trace", "serde"],
    ["std", "trace", "rand"],
    ["std", "trace", "base64"],
    ["std", "serde", "rand"],
    ["std", "serde", "base64"],
    ["std", "rand", "base64"],
    ["std", "compiler", "trace", "serde", "rand", "base64"],
]

[package.metadata.rbmt.integration]
package = "bitcoind-tests"
versions = [
    "30_2",
    "29_0",
    "28_2",
    "27_2",
    "26_2",
    "25_2",
    "24_2",
    "23_2",
    "22_1",
    "0_21_2",
    "0_20_2",
    "0_19_1",
    "0_18_1",
    "0_17_2",
]

[lints]
workspace = true

[workspace]
members = ["fuzz"]
exclude = ["embedded", "bitcoind-tests"]

[workspace.metadata.rbmt.toolchains]
nightly = "nightly-2026-06-14"
stable = "1.95.0"

[workspace.lints.clippy]
use_self = "warn"
