[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniscript = {path = "../"}
bitcoind = { package = "corepc-node", version = "0.4.0", default-features = false }
actual-rand = { package = "rand", version = "0.8.4"}
secp256k1 = {version = "0.32.0-beta.2", features = ["rand"]}

[features]
# Enable the same feature in `bitcoind`.
"26_0" = ["bitcoind/26_0"]
"25_2" = ["bitcoind/25_2"]
"25_1" = ["bitcoind/25_1"]
"25_0" = ["bitcoind/25_0"]
"24_2" = ["bitcoind/24_2"]
"24_1" = ["bitcoind/24_1"]
"24_0_1" = ["bitcoind/24_0_1"]
"23_2" = ["bitcoind/23_2"]
"23_1" = ["bitcoind/23_1"]
"23_0" = ["bitcoind/23_0"]
"22_1" = ["bitcoind/22_1"]
"22_0" = ["bitcoind/22_0"]
"0_21_2" = ["bitcoind/0_21_2"]
"0_20_2" = ["bitcoind/0_20_2"]
"0_19_1" = ["bitcoind/0_19_1"]
"0_18_1" = ["bitcoind/0_18_1"]
"0_17_1" = ["bitcoind/0_17_1"]
