[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniscript = {path = "../"}
bitcoind = { package = "corepc-node", version = "0.10.0", default-features = false }
actual-rand = { package = "rand", version = "0.8.4"}
secp256k1 = {version = "0.29.0", features = ["rand-std"]}

[features]
# Enable the same feature in `bitcoind`.
"29_0" = ["bitcoind/29_0"]
"28_2" = ["bitcoind/28_2"]
"27_2" = ["bitcoind/27_2"]
"26_2" = ["bitcoind/26_2"]
"25_2" = ["bitcoind/25_2"]
"24_2" = ["bitcoind/24_2"]
"23_2" = ["bitcoind/23_2"]
"22_1" = ["bitcoind/22_1"]
"0_21_2" = ["bitcoind/0_21_2"]
"0_20_2" = ["bitcoind/0_20_2"]
"0_19_1" = ["bitcoind/0_19_1"]
"0_18_1" = ["bitcoind/0_18_1"]
"0_17_2" = ["bitcoind/0_17_2"]
